# teleicu_gateway_rs

./: .env.example  .gitignore  CameraArch.md  Cargo.toml  Claude.md  flake.nix  humandocs.md  result
.github/workflows/: build.yml  ci.yml
.tangled/workflows/: build.yml  ci.yml
dev/: Caddyfile  demo.sh
migrations/: 0001_initial.sql
src/: care_client.rs  config.rs  error.rs  main.rs  state.rs  ws_proxy.rs
src/api/: camera.rs  health.rs  mod.rs  observation.rs  openid.rs  stream.rs
src/auth/: inbound.rs  outbound.rs
src/db/: assets.rs  daily_rounds.rs  mod.rs
src/observations/: mod.rs  store.rs  types.rs  validity.rs
src/onvif/: client.rs  lock.rs  mod.rs  soap.rs
src/tasks/: automated_observations.rs  camera_status.rs  mod.rs  s3_dump.rs
src/ws/: logger.rs  mod.rs  observations.rs
