[package]
name = "teleicu-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "teleicu-gateway"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }

# Web framework
axum           = { version = "0.7", features = ["ws", "macros"] }
tower          = "0.4"
tower-http     = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Database
sqlx           = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }

# HTTP client
reqwest        = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# JWT — inbound validation
jsonwebtoken   = "9"

# RSA keypair — outbound signing + JWKS exposure
rsa            = { version = "0.9", features = ["pem", "sha2"] }
pkcs8          = { version = "0.10", features = ["alloc", "pem"] }

# XML — ONVIF SOAP
quick-xml      = { version = "0.31", features = ["serialize"] }

# Crypto — ONVIF WS-Security digest
sha1           = "0.10"
base64         = "0.22"

# Credential encryption at rest
aes-gcm        = "0.10"
rand           = "0.8"

# Config
dotenvy        = "0.15"

# Time, IDs, logging
uuid           = { version = "1", features = ["v4", "serde"] }
chrono         = { version = "0.4", features = ["serde"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# System metrics — LoggerConsumer
sysinfo        = "0.30"

# S3
aws-config     = "1"
aws-sdk-s3     = "1"

# Async trait (required by axum's FromRequestParts)
async-trait    = "0.1"

# Error handling
anyhow         = "1"
thiserror      = "1"

# Concurrent map for camera locks and observation store
dashmap        = "5"

# Sentry — `transport` feature hardcodes `native-tls` (→ openssl-sys), so we
# wire the transport ourselves: `reqwest` supplies the HTTP client and `rustls`
# switches it to rustls-tls, keeping the entire dep-tree OpenSSL-free.
sentry         = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "tracing", "reqwest", "rustls"] }
